objects/Referral_State__mdt.object
<CustomObject>
    <description>Used to map conflicting state values across divisions.</description>
    <fields>
        <fullName>IHS_State_Code__c</fullName>
        <label>IHS State Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IHS_State_Name__c</fullName>
        <label>IHS State Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indices_State_Code__c</fullName>
        <label>Indices State Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Indices_State_Name__c</fullName>
        <label>Indices State Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MI_State_Code__c</fullName>
        <label>MI State Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MI_State_Name__c</fullName>
        <label>MI State Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platts_Name__c</fullName>
        <label>Platts Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Platts_State_Code__c</fullName>
        <label>Platts State Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratings_State_Code__c</fullName>
        <label>Ratings State Code</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ratings_State_Name__c</fullName>
        <label>Ratings State Name</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Referral_Country__c</fullName>
        <label>Referral Country</label>
        <referenceTo>Referral_Country__mdt</referenceTo>
        <relationshipLabel>Referral States</relationshipLabel>
        <relationshipName>Referral_States</relationshipName>
        <type>MetadataRelationship</type>
    </fields>
    <label>Referral State</label>
    <pluralLabel>Referral States</pluralLabel>
</CustomObject>